--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,13 @@
 
 # If you set the following environment variable, you will toggle the request
 # behaviour from the mock system Mirage to the URL you will put.
-NEXT_PUBLIC_API_BASE_URL =
+NEXT_PUBLIC_API_BASE_URL=
 
 # Use the following environment variables to show the environment name.
 NEXT_PUBLIC_DEV_ENV_NAME=staging
 NEXT_PUBLIC_DEV_ENV_COLOR_SCHEME=teal
+
+# Cloudinary integration
+# Make sure that the upload preset supports unsigned upload
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=
